# fs.github

./: .travis.yml  LICENSE  README.md  setup.cfg
fs/github/: __init__.py  githubfs.py  opener.py
tests/: __init__.py  test_githubfs.py  test_opener.py  utils.py
