[metadata]
name = fs.github
version = 0.0.1
author = Merlin Kessler
author-email = m3rlink@gmx.de
home-page = https://github.com/merlink01/fs.github
description = A PyFilesystem 2 implementation for accessing Github Repos
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = filesystem, Pyfilesystem2, github
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*
packages = fs.github
test_suite = tests
setup_requires = setuptools==50.3.0
install_requires =
  fs==2.4.11
  PyGithub==1.53

tests_require =
  fs.github[test]

[bdist_wheel]
universal = 1

[options.entry_points]
fs.opener =
    github = fs.github.opener:GithubOpener

[options.extras_require]
dev =
	docutils==0.16
	Pygments==2.7.1
	codecov==2.1.9
test =
	green==3.2.2
	coverage==4.5.4
	mock==3.0.5; python_version < "3.3"

[coverage:report]
show_missing = true
exclude_lines =
        pragma: no cover
        @abc.abstractmethod
        @abc.abstractproperty
        raise NotImplementedError
        return NotImplemented
        if six.PY3
        if six.PY2

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
